--- a/golang/ChangeLog.txt
+++ b/golang/ChangeLog.txt
@@ -1,3 +1,6 @@
+2022-09-23 Version: v2.0.0
+- Update with tea-utils
+
 2022-04-11 Version: v0.1.17
 - Support bearer token.
 - Support endpointOverride for OpenApiRequest.
